kubernetes/unifi/network-application/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi
spec:
  serviceName: unifi
  replicas: 1
  template:
    spec:
      securityContext:
        fsGroup: 999
        runAsGroup: 999
        runAsUser: 999
      containers:
      - name: unifi
        image: unifi
        imagePullPolicy: IfNotPresent
        ports:
        - name: inform
          containerPort: 8080
          protocol: TCP
        - name: discovery
          containerPort: 10001
          protocol: UDP
        - name: https
          containerPort: 8443
          protocol: TCP
        - name: portal-http
          containerPort: 8880
          protocol: TCP
        - name: portal-https
          containerPort: 8843
          protocol: TCP
        - name: speedtest
          containerPort: 6789
          protocol: TCP
        - name: stun
          containerPort: 3478
          protocol: UDP
        - name: syslog
          containerPort: 5514
          protocol: UDP
        volumeMounts:
        - name: unifi-config
          mountPath: /tmp/unifi
        - name: unifi-data
          mountPath: /unifi
        - name: usr-lib-unifi
          mountPath: /usr/lib/unifi
        - name: var-run-unifi
          mountPath: /var/run/unifi
        livenessProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
        resources:
          requests:
            memory: 3Gi
      volumes:
      - name: unifi-config
        configMap:
          name: unifi-config
      - name: unifi-data
        persistentVolumeClaim:
          claimName: unifi-unifi-data
      - name: usr-lib-unifi
        emptyDir: {}
      - name: var-run-unifi
        emptyDir: {}
