kubernetes/unifi/network-application/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  - port: 10001
    targetPort: discovery
    protocol: UDP
    name: discovery
  - port: 8443
    targetPort: https
    protocol: TCP
    name: https
  - port: 8880
    targetPort: portal-http
    protocol: TCP
    name: portal-http
  - port: 8843
    targetPort: portal-https
    protocol: TCP
    name: portal-https
  - port: 6789
    targetPort: speedtest
    protocol: TCP
    name: speedtest
  - port: 3478
    targetPort: stun
    protocol: UDP
    name: stun
  - port: 5514
    targetPort: syslog
    protocol: UDP
    name: syslog
